[KAFKA-20032] KIP-1265 polish: ASM doc, @Target, defensive copies, reproducible reports, surface unjustified suppressions
Five small polish items from the review file's minor/polish section,
batched as one commit because each is a few lines and they're orthogonal:

- api-checker/core/build.gradle: comment on the ASM 9.6 dep noting that
  ASM versions cap the JDK class-file major version they parse (Java 21
  / class-file 65 today). Bump in lockstep with the max compile JDK or
  the scanner throws `Unsupported class file major version N` on fresh
  bytecode.

- @InterfaceAudience.Public/.Private: added @Target(ElementType.TYPE).
  All 600+ existing usages are type-level; the constraint matches reality
  and rejects future package/parameter/local misuse at compile time.
  (SuppressKafkaInternalApiUsage already carried the proper @Target set.)

- CheckResult constructor: wraps both lists in List.copyOf so the result
  is an immutable snapshot; null-handling preserved (List.of() fallback)
  so the "either side may be omitted" contract still holds.

- ViolationReporter: report contents are now reproducible. Dropped the
  LocalDateTime.now() header, replaced HashMap-order groupingBy with
  TreeMap-keyed grouping, and added a stable VIOLATION_ORDER comparator
  (className → memberName → description) used for both the grouped
  sections and the suppressions list. Two runs over the same inputs
  now produce byte-identical reports.

- Surface unjustified suppressions: added PublicApiViolation.NO_REASON_MARKER
  as the single source of truth for the "(no reason given)" string, plus
  a PublicApiViolation#lacksReason() helper. The two sites that
  rendered empty reasons (CascadeValidator#asSuppression and
  PluginDeveloperApiUsageScanner) now reference the constant. All three
  task/mojo summaries (KafkaPublicApiCheckerTask,
  KafkaInternalApiCheckerTask, KafkaInternalApiCheckerMojo) count
  reason-less suppressions and log a WARN with the count and a pointer
  to KIP-1265's "r